--- a/ViewFinder/Base.lproj/Main.storyboard
+++ b/ViewFinder/Base.lproj/Main.storyboard
@@ -41,10 +41,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="PT2-3b-XVb" kind="show" identifier="detailsegue'" id="IAA-Fd-Jcs"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Aq-Sk-GVC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1688" y="-32"/>
+            <point key="canvasLocation" x="1677" y="11"/>
         </scene>
         <!--Add New Photo-->
         <scene sceneID="TAs-Q9-sny">
@@ -64,7 +67,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Album"/>
                                 <connections>
-                                    <action selector="albumTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="Fu4-9S-Qa0"/>
+                                    <action selector="albumTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="oTV-Ar-225"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Kn-Vy-VUF">
@@ -73,7 +76,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Camera"/>
                                 <connections>
-                                    <action selector="cameraTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="iYh-j5-rWY"/>
+                                    <action selector="cameraTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="t0b-JE-MXx"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P2O-pO-VQl">
@@ -83,7 +86,7 @@
                                 <state key="normal" title="Save"/>
                                 <connections>
                                     <action selector="saveAdd:" destination="M3N-9E-HaV" eventType="touchUpInside" id="S5S-DJ-FUG"/>
-                                    <action selector="saveAdd:" destination="VbK-N8-kVc" eventType="touchUpInside" id="ccc-Zd-SJk"/>
+                                    <action selector="saveAdd:" destination="VbK-N8-kVc" eventType="touchUpInside" id="WOO-IL-2pw"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ei9-jr-sgd">
@@ -92,7 +95,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Photo Library"/>
                                 <connections>
-                                    <action selector="photoLibTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="Zf7-VX-rWQ"/>
+                                    <action selector="photoLibTapped:" destination="VbK-N8-kVc" eventType="touchUpInside" id="UjH-te-0hk"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="write a caption..." borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kSm-zS-neC">
@@ -108,8 +111,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Add New Photo" id="MCk-Vh-wzP"/>
                     <connections>
-                        <outlet property="captionText" destination="kSm-zS-neC" id="li4-bc-22x"/>
-                        <outlet property="newImage" destination="0lp-7W-l07" id="d7e-xt-xpW"/>
+                        <outlet property="captionText" destination="kSm-zS-neC" id="mlC-Wc-nP0"/>
+                        <outlet property="newImage" destination="0lp-7W-l07" id="DTA-2c-xTA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vdG-Jg-7vc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -132,6 +135,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xFR-Bk-3vN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="770" y="-32"/>
+        </scene>
+        <!--Photo Detail View Controller-->
+        <scene sceneID="37Z-EG-9Kl">
+            <objects>
+                <viewController id="PT2-3b-XVb" customClass="PhotoDetailViewController" customModule="ViewFinder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="alZ-aB-EiE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kPK-eC-3gZ">
+                                <rect key="frame" x="43" y="124" width="328" height="423"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="Czi-8b-Sbh"/>
+                    </view>
+                    <connections>
+                        <outlet property="detailPhoto" destination="kPK-eC-3gZ" id="lVb-kI-UP0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dvb-uV-nVQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="990" y="802"/>
         </scene>
     </scenes>
     <resources>
